<resources>
    <string name="app_name">FlightMobileApp</string>
    <string name="connect">Connect</string>
    <string name="type_url">Type URL…</string>
    <string name="localHost1">localHost1</string>
    <string name="localHost2">localHost2</string>
    <string name="localHost3">localHost3</string>
    <string name="localHost4">localHost4</string>
    <string name="localHost5">localHost5</string>
    <string name="logo">logo</string>
    <string name="Throttle">Throttle</string>
    <string name="Rudder">Rudder</string>
    <string name="screenshot">screenshot</string>
    <string name="Elevator">&#160;Elevator</string>
    <string name="Aileron">&#160;Aileron</string>
    <string name="num0">0.00</string>
</resources>