<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    app:layout_constraintCircleAngle="150"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:background="@drawable/round_button"
        android:fontFamily="serif"
        android:gravity="center_vertical|center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/connect"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleAngle="80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <EditText
        android:id="@+id/typeUrl"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:background="#6579E6"
        android:contentDescription="@string/type_url"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:importantForAccessibility="auto"
        android:inputType="textUri|none|textNoSuggestions"
        android:text="@string/type_url"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleAngle="100"
        app:layout_constraintEnd_toStartOf="@+id/connectButton"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        tools:ignore="LabelFor"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="214dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/large"/>


    <RelativeLayout
        android:id="@+id/addresses_confirm_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/localHost1"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="#2196F3"
        android:text="@string/localHost1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        tools:visibility="visible" />

    <Button
        android:id="@+id/localHost2"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="#2196F3"
        android:text="@string/localHost2"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localHost1"
        app:layout_constraintVertical_bias="0.011"
        tools:visibility="visible" />

    <Button
        android:id="@+id/localHost3"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="#2196F3"
        android:text="@string/localHost3"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localHost2"
        app:layout_constraintVertical_bias="0.018"
        tools:visibility="visible" />

    <Button
        android:id="@+id/localHost5"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="#2196F3"
        android:text="@string/localHost5"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/addresses_confirm_root_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localHost4"
        app:layout_constraintVertical_bias="0.054"
        tools:visibility="visible" />

    <Button
        android:id="@+id/localHost4"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="#2196F3"
        android:text="@string/localHost4"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localHost3"
        app:layout_constraintVertical_bias="0.032"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>